<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/key_04"
        android:textColor="#0A0A0A"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_16sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@android:color/transparent"
                android:hint="@string/key_05"
                style="@style/TextInputLayoutAppearance"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:lines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/edit_text"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@android:color/transparent"
                android:hint="@string/key_06"
                style="@style/TextInputLayoutAppearance"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:lines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/edit_text"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@android:color/transparent"
                android:hint="@string/key_07"
                style="@style/TextInputLayoutAppearance"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilMobileNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:lines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/edit_text"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@android:color/transparent"
                android:hint="@string/key_07"
                style="@style/TextInputLayoutAppearance"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilDob">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:lines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/edit_text"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@android:color/transparent"
                android:hint="@string/key_09"
                style="@style/TextInputLayoutAppearance"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/edit_text"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@android:color/transparent"
                android:hint="@string/key_10"
                style="@style/TextInputLayoutAppearance"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="@color/edit_text"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <TextView
                android:id="@+id/tvValidationTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/edit_text"
                android:textSize="@dimen/_8ssp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:drawablePadding="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:text="@string/key_11"
                app:drawableStartCompat="@drawable/ic_unselected" />

            <TextView
                android:id="@+id/tvValidationOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/edit_text"
                android:textSize="@dimen/_8ssp"
                android:layout_marginStart="@dimen/_16sdp"
                android:drawablePadding="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:text="@string/key_12"
                app:drawableStartCompat="@drawable/ic_unselected" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierTopValidation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tvValidationOne, tvValidationTwo"
                app:barrierDirection="bottom"/>


            <TextView
                android:id="@+id/tvValidationThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/barrierTopValidation"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/edit_text"
                android:textSize="@dimen/_8ssp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:drawablePadding="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:text="@string/key_13"
                app:drawableStartCompat="@drawable/ic_unselected" />

            <TextView
                android:id="@+id/tvValidationFour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrierTopValidation"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/edit_text"
                android:textSize="@dimen/_8ssp"
                android:layout_marginStart="@dimen/_16sdp"
                android:drawablePadding="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:text="@string/key_14"
                app:drawableStartCompat="@drawable/ic_unselected" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierBottomValidation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tvValidationThree, tvValidationFour"
                app:barrierDirection="bottom"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_8ssp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrierBottomValidation"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/key_15"
                android:textColor="@color/edit_text"
                android:button="@drawable/check_box_bg"
                android:paddingStart="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/key_02"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@+id/chkTerm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvAlreadyAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/key_16"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>