<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_8sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/key_21"
        android:textColor="#0A0A0A"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_48sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/key_05"
                android:textAppearance="@style/HintText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/edit_text"
                android:drawableStart="@drawable/ic_material_email"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/roboto_regular"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/edit_text"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/key_09"
                android:textAppearance="@style/HintText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/edit_text"
                android:drawableStart="@drawable/ic_awesome_lock"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/roboto_regular"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/edit_text"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/key_19"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/key_21"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/tvNoAccountSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNoAccountSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/key_20"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>